# opentelemetry-rust

opentelemetry-aws/: Cargo.toml
opentelemetry-aws/src/: detector.rs  lib.rs
