[package]
name = "opentelemetry-aws"
version = "0.6.0"
description = "AWS exporters and propagators for OpenTelemetry"
homepage = "https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry-aws"
repository = "https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry-aws"
readme = "README.md"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
]
keywords = ["opentelemetry", "tracing"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.60"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["trace"]
trace = ["opentelemetry/trace"]
detector = ["reqwest/blocking", "reqwest/json", "reqwest/default-tls", "serde", "opentelemetry-semantic-conventions"]

[dependencies]
once_cell = "1.12"
opentelemetry = { version = "0.18", path = "../opentelemetry", features = ["trace"] }
opentelemetry-semantic-conventions = { version = "0.10", path = "../opentelemetry-semantic-conventions", optional = true }
reqwest = { version = "0.11", optional = true, default-features = false }
serde = { version = "1.0", optional = true }

[dev-dependencies]
opentelemetry = { path = "../opentelemetry", features = ["trace", "testing"] }
opentelemetry-http = { path = "../opentelemetry-http" }
hyper = { version = "0.14" }
tokio = { version = "1.0", features = ["macros", "rt"] }
